fix button spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2452,6 +2452,7 @@ a {text-decoration:none;}
 
 .folio {
 	font-size: 0.8rem;
+	padding:1.2em;
 	/* background-color: #ffa500; */
 }
 
